cmake_minimum_required(VERSION 3.13)
project(uulp C)

set(CMAKE_C_STANDARD 11)

add_executable(ch1_more ch1/more.c)
add_executable(who ch2/who.c ch2/utmplib.c ch2/utmplib.h)
add_executable(cp ch2/cp.c)
add_executable(ls ch3/ls.c)
add_executable(fileinfo ch3/fileinfo.c)
add_executable(pwd ch4/pwd.c)
add_executable(write ch5/write.c)
add_executable(echostate ch5/echostate.c)
add_executable(setecho ch5/setecho.c)
add_executable(play_again ch6/play_again.c)