cmake_minimum_required(VERSION 3.13)
project(uulp C)

set(CMAKE_C_STANDARD 11)

add_executable(ch1_more ch1/more.c)
add_executable(who ch2/who.c ch2/utmplib.c ch2/utmplib.h)
add_executable(cp ch2/cp.c)
add_executable(ls ch3/ls.c)
add_executable(fileinfo ch3/fileinfo.c)
add_executable(pwd ch4/pwd.c)
add_executable(write ch5/write.c)
add_executable(echostate ch5/echostate.c)
add_executable(setecho ch5/setecho.c)
add_executable(play_again ch6/play_again.c)
add_executable(hello1 ch7/curses_hello1.c)
target_link_libraries(hello1 curses)
add_executable(hello2 ch7/curses_hello2.c)
target_link_libraries(hello2 curses)
add_executable(hello3 ch7/curses_hello3.c)
target_link_libraries(hello3 curses)
add_executable(hello4 ch7/curses_hello4.c)
target_link_libraries(hello4 curses)
add_executable(ticker_demo ch7/ticker_demo.c)
add_executable(sig_demo ch7/sig_demo.c)
add_executable(sigact_demo ch7/sigact_demo.c)
