cmake_minimum_required(VERSION 3.13)
project(uulp C)

set(CMAKE_C_STANDARD 11)

add_executable(ch1_more ch1/more.c)
add_executable(who ch2/who.c ch2/utmplib.c ch2/utmplib.h)
add_executable(cp ch2/cp.c)
add_executable(ls ch3/ls.c)
add_executable(fileinfo ch3/fileinfo.c)
add_executable(pwd ch4/pwd.c)
add_executable(write ch5/write.c)
add_executable(echostate ch5/echostate.c)
add_executable(setecho ch5/setecho.c)
add_executable(play_again ch6/play_again.c)
add_executable(hello1 ch7/curses_hello1.c)
target_link_libraries(hello1 curses)
add_executable(hello2 ch7/curses_hello2.c)
target_link_libraries(hello2 curses)
add_executable(hello3 ch7/curses_hello3.c)
target_link_libraries(hello3 curses)
add_executable(hello4 ch7/curses_hello4.c)
target_link_libraries(hello4 curses)
add_executable(ticker_demo ch7/ticker_demo.c)
add_executable(sig_demo ch7/sig_demo.c)
add_executable(sigact_demo ch7/sigact_demo.c)
add_executable(bounce1d ch7/bounce1d.c)
target_link_libraries(bounce1d ncurses)
add_executable(bounce2d ch7/bounce2d.c ch7/bounce.h)
target_link_libraries(bounce2d ncurses)
add_executable(bounce_async ch7/bounce_async.c)
target_link_libraries(bounce_async ncurses)
add_executable(bounce_aio ch7/bounce_aio.c)
target_link_libraries(bounce_aio ncurses)
add_executable(psh1 ch8/psh1.c)
add_executable(wait_demo ch8/wait_demo.c)
add_executable(fork_demo ch8/fork_demo.c)
add_executable(psh2 ch8/psh2.c)
add_executable(smsh ch9/smsh.c ch9/execute.c ch9/smsh.h ch9/splitline.c ch9/proces.c ch9/controlflow.c ch9/builtin.c ch9/varlib.h ch9/varlib.c)
add_executable(showenv ch9/showenv.c)
add_executable(whotofile ch10/whotofile.c)
add_executable(pipedemo ch10/pipedemo.c)
add_executable(pipedemo2 ch10/pipedemo2.c)
add_executable(pipe ch10/pipe.c)
add_executable(tinybc ch11/tinybc.c)
add_executable(popendemo ch11/popendemo.c)
add_executable(popen ch11/popen.c)
add_executable(timeserv ch11/timeserv.c)
add_executable(timeclient ch11/timeclient.c)